[package]
name = "novel-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9"
env_logger = "0.11"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.35", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.5"
log = "0.4"
im-rc = "15.1"
